--- a/Codingan/home.html
+++ b/Codingan/home.html
@@ -3,9 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ekstrakurikuler Scheduler</title>
+    <style>
+        .form-control {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        .button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        .button:hover {
+            opacity: 0.8;
+        }
+
+        .cancelbtn {
+            width: auto;
+            padding: 10px 18px;
+            background-color: #f44336;
+        }
+
+        .container {
+            padding: 16px;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+    </style>
 </head>
 <body>
-    
+    <h2>Ekstrakurikuler Scheduler</h2>
+
+    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Tambah Ekstrakurikuler</button>
+
+    <div id="id01" class="modal">
+        <span onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">&times;</span>
+        <div class="container">
+            <label for="fname">Nama Ekstrakurikuler</label>
+            <input type="text" id="fname" name="fname" class="form-control">
+            <label for="lname">Jadwal</label>
+            <input type="text" id="lname" name="lname" class="form-control">
+            <button type="button" class="button" onclick="addData()">Tambah</button>
+        </div>
+    </div>
+
+    <h2>List Ekstrakurikuler</h2>
+    <table id="myTable">
+        <tr class="header">
+            <th style="width:60%;">Nama Ekstrakurikuler</th>
+            <th style="width:40%;">Jadwal</th>
+        </tr>
+    </table>
+
+    <script>
+        function addData() {
+            var fname = document.getElementById("fname").value;
+            var lname = document.getElementById("lname").value;
+            var table = document.getElementById("myTable");
+            var row = table.insertRow(-1);
+            var cell1 = row.insertCell(0);
+            var cell2 = row.insertCell(1);
+            cell1.innerHTML = fname;
+            cell2.innerHTML = lname;
+            document.getElementById('id01').style.display='none';
+        }
+    </script>
 </body>
 </html>
