--- a/Codingan/Loginupdate.html
+++ b/Codingan/Loginupdate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login SMP</title>
+    <title>Login SMP N 1 JATI AGUNG</title>
     <style>
         body {
             margin: 0;
@@ -18,7 +18,7 @@
         }
 
         .container {
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: rgba(61, 78, 177, 0.9);
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Login SMP</h2>
+        <h2>Login SMP N 1 JATI AGUNG</h2>
         <form id="loginForm">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
