--- a/Codingan/home.html
+++ b/Codingan/home.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    <h2>Ekstrakurikuler Scheduler</h2>
+    <h2>Eeekstrakurikuler Scheduler</h2>
 
     <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Tambah Ekstrakurikuler</button>
 
