Thalia: update html ganti warna

--- a/Codingan/Lanjutan Home.html
+++ b/Codingan/Lanjutan Home.html
@@ -16,7 +16,7 @@
         }
 
         .button {
-            background-color: #78a7dd;
+            background-color: #054da0;
             color: white;
             padding: 14px 20px;
             margin: 8px 0;
