master:update html color Galeri

--- a/Codingan/Galeri.html
+++ b/Codingan/Galeri.html
@@ -30,7 +30,7 @@
 </style>  
 </head> 
 <body>
-    <main style="background-color:cornflowerblue;">  
+    <main style="background-color:#0f5ded;">  
 
         <img src="./img/Pramuka.png" width="240px" height="180px" alt="Deskripsi gambar">
         <p>Pramuka adalah singkatan dari Praja Muda Karana, yang berarti "Jiwa Muda yang Suka Berkarya". Pramuka adalah organisasi pendidikan nonformal yang menyelenggarakan pendidikan kepanduan di Indonesia
@@ -45,8 +45,8 @@
             Permainan futsal dimainkan oleh dua tim, masing-masing terdiri dari lima pemain. Salah satu di antara mereka adalah penjaga gawang. Karena jumlah pemain yang lebih sedikit dan lapangan yang lebih kecil, futsal menekankan pada kecepatan permainan, teknik individu, dan koordinasi tim.</p> 
 
         <img src="./img/Tari.jpg" width="240px" height="180px" alt="Deskripsi gambar">
-        <p>Tari adalah bentuk seni yang universal, menggabungkan unsur-unsur fisik, emosional, dan artistik untuk menciptakan pengalaman yang mendalam dan berkesan. Dengan keanekaragaman tarian di seluruh dunia, seni ini memainkan peran penting dalam memperkaya warisan budaya global.
-            Ada berbagai macam gaya tari di seluruh dunia, termasuk tari klasik, tari kontemporer, tari rakyat, tari etnik, dan banyak lagi. Kostum dalam tari sering dirancang untuk menyoroti gerakan dan tema pertunjukan. Kostum dapat mencakup busana tradisional, pakaian modern, atau pakaian yang dibuat khusus untuk pertunjukan.</p>
+        <p> <b>Tari adalah bentuk seni yang universal, menggabungkan unsur-unsur fisik, emosional, dan artistik untuk menciptakan pengalaman yang mendalam dan berkesan. Dengan keanekaragaman tarian di seluruh dunia, seni ini memainkan peran penting dalam memperkaya warisan budaya global.
+            Ada berbagai macam gaya tari di seluruh dunia, termasuk tari klasik, tari kontemporer, tari rakyat, tari etnik, dan banyak lagi. Kostum dalam tari sering dirancang untuk menyoroti gerakan dan tema pertunjukan. Kostum dapat mencakup busana tradisional, pakaian modern, atau pakaian yang dibuat khusus untuk pertunjukan.</b></p>
     </main>  
      <!-- Kode JS -->
     <script>
