--- a/Codingan/Loginupdate.html
+++ b/Codingan/Loginupdate.html
@@ -90,10 +90,10 @@
             var password = document.getElementById("password").value;
 
             // Contoh sederhana: Cek apakah username dan password tidak kosong
-            if (username === "smpuser" && password === "smppass") {
+            if (username === "user" && password === "123") {
                 alert("Login berhasil!");
                 // Redirect ke halaman home setelah login
-                window.location.href = "home.html";
+                window.location.href = "Galeri.html"; //Arahkan pengguna kehalaman berikutnya
             } else {
                 alert("Username atau password salah!");
             }
