--- a/Codingan/Lanjutan Home.html
+++ b/Codingan/Lanjutan Home.html
@@ -61,7 +61,7 @@
             width: 80%;
         }
     </style>
-    </head> <body> <h2>Ekstrakurikuler Scheduler</h2>
+    </head> <body> <h2>Jadwal Ekstrakurikuler </h2>
    
     <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Tambah Ekstrakurikuler</button>
     
