Intan : update html ganti username dan password

--- a/Codingan/Loginupdate.html
+++ b/Codingan/Loginupdate.html
@@ -90,7 +90,7 @@
             var password = document.getElementById("password").value;
 
             // Contoh sederhana: Cek apakah username dan password tidak kosong
-            if (username === "user" && password === "123") {
+            if (username === "User" && password === "123") {
                 alert("Login berhasil!");
                 // Redirect ke halaman home setelah login
                 window.location.href = "Galeri.html"; //Arahkan pengguna kehalaman berikutnya
