master:update deskripsi tari

--- a/Codingan/Galeri.html
+++ b/Codingan/Galeri.html
@@ -46,7 +46,8 @@
 
         <img src="./img/Tari.jpg" width="240px" height="180px" alt="Deskripsi gambar">
         <p> <b>Tari adalah bentuk seni yang universal, menggabungkan unsur-unsur fisik, emosional, dan artistik untuk menciptakan pengalaman yang mendalam dan berkesan. Dengan keanekaragaman tarian di seluruh dunia, seni ini memainkan peran penting dalam memperkaya warisan budaya global.
-            Ada berbagai macam gaya tari di seluruh dunia, termasuk tari klasik, tari kontemporer, tari rakyat, tari etnik, dan banyak lagi. Kostum dalam tari sering dirancang untuk menyoroti gerakan dan tema pertunjukan. Kostum dapat mencakup busana tradisional, pakaian modern, atau pakaian yang dibuat khusus untuk pertunjukan.</b></p>
+            Ada berbagai macam gaya tari di seluruh dunia, termasuk tari klasik, tari kontemporer, tari rakyat, tari etnik, dan banyak lagi. Kostum dalam tari sering dirancang untuk menyoroti gerakan dan tema pertunjukan. Kostum dapat mencakup busana tradisional, pakaian modern, atau pakaian yang dibuat khusus untuk pertunjukan.
+            Tidak ada tahun yang secara khusus dapat diidentifikasi sebagai "tahun berdirinya tari" karena tari telah ada sepanjang sejarah manusia sebagai ekspresi budaya, ritual keagamaan, hiburan, dan bentuk ekspresi lainnya. Tari telah menjadi bagian integral dari berbagai tradisi dan peradaban.</b></p>
     </main>  
      <!-- Kode JS -->
     <script>
