--- a/Codingan/Loginupdate.html
+++ b/Codingan/Loginupdate.html
@@ -81,6 +81,10 @@
             <input type="password" id="password" name="password" required>
 
             <button type="button" onclick="validateLogin()">Login</button>
+
+            <div class="sign-up">
+                <p>Belum punya akun? <a href="signup.html">Sign Up</a></p>
+            </div>
         </form>
     </div>
 
