Intan : update html ganti kata login dengan SMP N 1 JATI AGUNG

--- a/Codingan/Loginupdate.html
+++ b/Codingan/Loginupdate.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Login SMP N 1 JATI AGUNG</h2>
+        <h2>SMP N 1 JATI AGUNG</h2>
         <form id="loginForm">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
