--- a/Codingan/Lanjutan Home.html
+++ b/Codingan/Lanjutan Home.html
@@ -61,9 +61,11 @@
             width: 80%;
         }
     </style>
-    </head> <body> <h2>Jadwal Ekstrakurikuler </h2>
+    </head> <body> 
+        
+        <h2>Jadwal Ekstrakurikuler </h2>
    
-    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Tambah Ekstrakurikuler</button>
+    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"><b>Tambah Ekstrakurikuler</b></button>
     
     <div id="id01" class="modal">
         <span onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">&times;</span>
@@ -79,7 +81,7 @@
     <h2>List Ekstrakurikuler</h2>
     <table id="myTable">
         <tr class="header">
-            <th style="width:60%;">Nama Ekstrakurikuler</th>
+            <th style="width:60%;"><b>Nama Ekstrakurikuler</th>
             <th style="width:40%;">Jadwal</th>
             <th style="width:20%;">Aksi</th>
         </tr>
