--- a/Codingan/Lanjutan Home.html
+++ b/Codingan/Lanjutan Home.html
@@ -32,7 +32,7 @@
         .cancelbtn {
             width: auto;
             padding: 10px 18px;
-            background-color: #f44336;
+            background-color: #ac2016;
         }
     
         .container {
