update nama html

--- a/Codingan/Loginupdate.html
+++ b/Codingan/Loginupdate.html
@@ -97,7 +97,7 @@
             if (username === "User" && password === "123") {
                 alert("Login berhasil!");
                 // Redirect ke halaman home setelah login
-                window.location.href = "Galeri.html"; //Arahkan pengguna kehalaman berikutnya
+                window.location.href = "Deskripsi.html"; //Arahkan pengguna kehalaman berikutnya
             } else {
                 alert("Username atau password salah!");
             }
